                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 21-02-2006 fixed: Initial control focus was wrong in many windows.
 - 21-02-2006 fixed: [ 1431850 ] Shoutcast video playlist labels showed server name instead of description.
 - 21-02-2006 fixed: WindowOpen animations weren't reversed on WindowClose if they hadn't passed the delay state.
 - 20-02-2006 fixed: acceleration wasn't being read for slide effects.
 - 20-02-2006 changed: SET_FOCUS now focuses the first focusable control with the given id (or attempts to focus the first non-focusable control with the given id if that fails).
 - 20-02-2006 added: Window.IsMedia conditional visibility.
 - 20-02-2006 added: some minor tweaks to party mode:  When first enabled, window switches to Now Playing window.
			Better checking for the "Move" options in the Now Playing context menu since Party Mode takes over.
			Added "Cancel Party Mode" option to Now Playing context menu.
 - 20-02-2006 fixed: Replaygain settings weren't being applied.
 - 20-02-2006 fixed: Musicoverlay visibility on Control.HasFocus() wasn't working.
 - 20-02-2006 changed: If no thumb is available, ListItem.Thumb uses the icon image.
 - 20-02-2006 added: Analog scrolling (triggers) to the button scroller.
 - 20-02-2006 fixed: Various initial control focus issues.
 - 20-02-2006 changed: Redid the Trainers dialog to use the DialogSettings base class.
 - 20-02-2006 fixed: Possible buffer overruns in setting and getting trainers settings from the database.
 - 19-02-2006 added: Initial support for Music Party Mode.  Enable it from the Library view as it requires the database.
 - 19-02-2006 changed: Refactored the window open and window close processes.